TP6492) Bugfix Number widget
If number was too large, then the widget would overflow into neighbouring content.

--- a/styles/less/widgets.less
+++ b/styles/less/widgets.less
@@ -27,6 +27,7 @@
     height: @mLargeWidgetHeight;
     margin: auto;
     vertical-align: middle;
+    overflow: hidden
 }
 
 .mOFullWidget {
